@@ -36,7 +36,8 @@ All the Swagger annotations for documenting the controller are self explanatory.
 
 @ApiParam → Narrates the parameter the method is expecting and also tells whether it is mandatory or not.
 
-Run this project by this command : `mvn clean spring-boot:run`
+Run this project by this command : `mvn spring-boot:run -Dspring-boot.run.jvmArguments="--add-opens java.base/java.lang=ALL-UNNAMED"
+`
 
 Open your browser :
 
